syntax = "proto3";

option csharp_namespace = "yuapi_OcelotGateway";

package invokecount;

service InvokeCount {
    rpc UpdateCount (UpdateCountRequest) returns (UpdateCountReply);
}

message UpdateCountRequest {
    int32 interfaceInfoId = 1;
    int32 userId = 2;
}

message UpdateCountReply {
    bool success = 1;
}
